added .doom.d to unignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,11 @@
 
 !.gitignore
 
-!.bash_profile
-!.bashrc
 !.vimrc
 !.xsh
 !.spacemacs
+
+!.doom.d
 
 !FrontEndDelight.itermcolors
 !SolarizedDark.itermcolors
